[package]
name = "watermill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
chrono = "0.4.26"
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"
directories = "5.0.1"
tokio = { version = "1.29.1", features = ["full"] }
pnet = { version = "0.34.0", features = ["std"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.181", features = ["derive"] }
sudo = "0.6.0"

[profile.release]
lto = true