[package]
name = "watermill"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
directories = "5.0.1"
tokio = { version = "1.37.0", features = ["full"] }
pnet = { version = "0.34.0", features = ["std"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
sudo = "0.6.0"

[profile.release]
lto = true
