[package]
name = "watermill"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
directories = "5.0.1"
tokio = { version = "1.43.1", features = ["full"] }
pnet = { version = "0.35.0", features = ["std"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
sudo = "0.6.0"

[profile.release]
lto = true
